V 0.750 Login Logo and phone number in registration

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,3 +53,15 @@ body {
   white-space: nowrap;
   border-width: 0;
 }
+
+
+
+/* for login */
+
+.auth-app-name {
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+  margin: 1rem 0 0.5rem 0;
+  color: #1f2937;
+}
